--- a/scenarios/metrics/ingest-with-prometheus/values.yaml
+++ b/scenarios/metrics/ingest-with-prometheus/values.yaml
@@ -5,14 +5,14 @@ prometheus:
   - url: http://tobs-promscale.bench.svc:9201/write
     remoteTimeout: 100s
     # Configuration options in https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#queueconfig
-    queueConfig:
-      capacity: 100000
-      minShards: 20
-      maxShards: 20
-      maxSamplesPerSend: 10000
-      batchSendDeadline: 30s
-      minBackoff: 100ms
-      maxBackoff: 10s
+    # queueConfig:
+    #   capacity: 100000
+    #   minShards: 20
+    #   maxShards: 30
+    #   maxSamplesPerSend: 30000
+    #   batchSendDeadline: 30s
+    #   minBackoff: 100ms
+    #   maxBackoff: 2s
   resources:
     requests:
       cpu: 2
@@ -35,8 +35,8 @@ avalanche:
     # 30s by Prometheus.
     # To increase the load, we can simply increase the value of
     # replicaCount in avalanche values.
-    - --metric-count=1000
-    - --series-count=600
+    - --metric-count=5000
+    - --series-count=120
     - --label-count=10
     - --value-interval=10
   labels:
